--- a/index.html
+++ b/index.html
@@ -55,16 +55,156 @@
     </nav>
 
     <!-- Hero -->
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-      <div class="container-fluid py-5 text-center">
-        <h1 class="display-5 fw-bold">Esther Smeke</h1>
-        <p class="col-md-8 fs-4 offset-md-2 mb-5">
-          👋 Hi! Welcome to my personal website.<br />
-          Feel free to look around, or have a look at my portfolio.
-        </p>
-        <a href="/portfolio" class="btn btn-primary btn-lg"> My portfolio </a>
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img
+            src="https://placehold.co/500x500"
+            class="d-block mx-lg-auto img-fluid"
+            alt="Bootstrap Themes"
+            width="700"
+            height="500"
+            loading="lazy"
+          />
+        </div>
+        <div class="col-lg-6">
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
+            Esther Smeke
+          </h1>
+          <p class="lead">
+            👋 Hi! Welcome to my personal website.<br />
+            Feel free to look around, or have a look at my portfolio.
+          </p>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <a
+              href="/portfolio.html"
+              class="btn btn-primary btn-lg px-4 me-md-2"
+            >
+              Portfolio
+            </a>
+            <a
+              href="/contact.html"
+              class="btn btn-outline-secondary btn-lg px-4"
+            >
+              Contact
+            </a>
+          </div>
+        </div>
       </div>
     </div>
+
+    <!-- Latest Work -->
+    <section id="homeWork" class="section--xl">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 align-self-center">
+            <p class="small text-info mb-1">Latest Work</p>
+            <h2 class="mb-3">Zenworks</h2>
+            <p class="text-black-50">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              odio est eius distinctio odit repellat similique eos repellendus
+              accusamus. Autem consequatur tempora, praesentium facere quasi
+              vitae fuga iusto ullam architecto!
+            </p>
+            <br />
+            <a href="/" class="btn btn-outline-info"> View More &raquo; </a>
+          </div>
+
+          <div class="col-md-6">
+            <img
+              class="shadow-lg rounded-lg"
+              src="https://placehold.co/600x400"
+              alt="Placeholder"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- From the Blog -->
+    <section id="homeBlog" class="section--xl bg-primary">
+      <div class="container">
+        <h2 class="mb-3">From My Blog</h2>
+        <p class="lead">Articles, News and Interesting Stuff!</p>
+
+        <div class="mt-2 mt-md-5 row">
+          <div class="col-md-4">
+            <article class="card card--post shadow">
+              <img
+                class="card-img-top"
+                src="https://placehold.co/400x300"
+                alt="Post"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Post Title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-sm btn-primary">Read</a>
+              </div>
+            </article>
+          </div>
+          <div class="col-md-4">
+            <article class="card card--post shadow">
+              <img
+                class="card-img-top"
+                src="https://placehold.co/400x300"
+                alt="Post"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Post Title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-sm btn-primary">Read</a>
+              </div>
+            </article>
+          </div>
+          <div class="col-md-4">
+            <article class="card card--post shadow">
+              <img
+                class="card-img-top"
+                src="https://placehold.co/400x300"
+                alt="Post"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Post Title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-sm btn-primary">Read</a>
+              </div>
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="py-3 bg-body-tertiary">
+      <ul
+        class="nav justify-content-center border-bottom border-tertiary-subtle pb-3 mb-3"
+      >
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-primary">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-primary">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-primary">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-primary">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-primary">Contact</a>
+        </li>
+      </ul>
+      <p class="text-center text-primary">© 2023 Esther Smeke</p>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
