--- a/index.html
+++ b/index.html
@@ -55,48 +55,54 @@
     </nav>
 
     <!-- Hero -->
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img
-            src="https://placehold.co/500x500"
-            class="d-block mx-lg-auto img-fluid"
-            alt="Bootstrap Themes"
-            width="700"
-            height="500"
-            loading="lazy"
-          />
-        </div>
-        <div class="col-lg-6">
-          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
-            Esther Smeke
-          </h1>
-          <p class="lead">
-            👋 Hi! Welcome to my personal website.<br />
-            Feel free to look around, or have a look at my portfolio.
-          </p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a
-              href="/portfolio.html"
-              class="btn btn-primary btn-lg px-4 me-md-2"
-            >
-              Portfolio
-            </a>
-            <a
-              href="/contact.html"
-              class="btn btn-outline-secondary btn-lg px-4"
-            >
-              Contact
-            </a>
+    <section class="hero bg-black text-white">
+      <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img
+              src="https://placehold.co/500x500"
+              class="d-block mx-lg-auto img-fluid"
+              alt="Bootstrap Themes"
+              width="700"
+              height="500"
+              loading="lazy"
+            />
+          </div>
+          <div class="col-lg-6">
+            <h1 class="display-5 fw-bold text-primary lh-1 mb-3">
+              Esther Smeke
+            </h1>
+            <p class="lead">
+              👋 Hi! Welcome to my personal website.<br />
+              Feel free to look around, or have a look at my portfolio.
+            </p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <a
+                href="/portfolio.html"
+                class="btn btn-primary btn-lg px-4 me-md-2"
+              >
+                Portfolio
+              </a>
+              <a href="/contact.html" class="btn btn-outline-light btn-lg px-4">
+                Contact
+              </a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- Latest Work -->
     <section id="homeWork" class="section--xl">
       <div class="container">
         <div class="row">
+          <div class="col-md-6">
+            <img
+              class="shadow-lg rounded-lg"
+              src="https://placehold.co/600x400"
+              alt="Placeholder"
+            />
+          </div>
           <div class="col-md-6 align-self-center">
             <p class="small text-info mb-1">Latest Work</p>
             <h2 class="mb-3">Zenworks</h2>
@@ -108,14 +114,6 @@
             </p>
             <br />
             <a href="/" class="btn btn-outline-info"> View More &raquo; </a>
-          </div>
-
-          <div class="col-md-6">
-            <img
-              class="shadow-lg rounded-lg"
-              src="https://placehold.co/600x400"
-              alt="Placeholder"
-            />
           </div>
         </div>
       </div>
