--- a/index.html
+++ b/index.html
@@ -3,21 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Title-->
     <title>Esther Smeke</title>
+    <!--Description-->
     <meta name="description" content="Design Portfolio for Esther Smeke." />
+    <!--FavIcon-->
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <!--CSS-->
     <link rel="stylesheet" href="css/style.css" />
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Esther Smeke</a>
+        <a class="navbar-brand" href="/index.html">ESTHER SMEKE</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,7 +46,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"> Home </a>
+              <a class="nav-link active" aria-current="page" href="/index.html">
+                Home
+              </a>
             </li>
             <li class="nav-item">
               <a href="/about.html" class="nav-link">About</a>
@@ -55,7 +70,7 @@
     </nav>
 
     <!-- Hero -->
-    <section class="hero bg-black text-white">
+    <section class="hero bg-secondary bg-gradient text-white">
       <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6">
@@ -69,17 +84,15 @@
             />
           </div>
           <div class="col-lg-6">
-            <h1 class="display-5 fw-bold text-primary lh-1 mb-3">
-              Esther Smeke
-            </h1>
+            <h1 class="display-5 fw-bold text-info lh-1 mb-3">👋 Hi!</h1>
             <p class="lead">
-              👋 Hi! Welcome to my personal website.<br />
+              Welcome to my personal website.<br />
               Feel free to look around, or have a look at my portfolio.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <a
                 href="/portfolio.html"
-                class="btn btn-primary btn-lg px-4 me-md-2"
+                class="btn btn-info btn-lg px-4 me-md-2"
               >
                 Portfolio
               </a>
@@ -120,7 +133,7 @@
     </section>
 
     <!-- From the Blog -->
-    <section id="homeBlog" class="section--xl bg-primary">
+    <section id="homeBlog" class="section--xl bg-info">
       <div class="container">
         <h2 class="mb-3">From My Blog</h2>
         <p class="lead">Articles, News and Interesting Stuff!</p>
@@ -139,7 +152,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-sm btn-primary">Read</a>
+                <a href="#" class="btn btn-sm btn-outline-info">Read</a>
               </div>
             </article>
           </div>
@@ -156,7 +169,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-sm btn-primary">Read</a>
+                <a href="#" class="btn btn-sm btn-outline-info">Read</a>
               </div>
             </article>
           </div>
@@ -173,7 +186,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-sm btn-primary">Read</a>
+                <a href="#" class="btn btn-sm btn-outline-info">Read</a>
               </div>
             </article>
           </div>
@@ -186,32 +199,30 @@
         class="nav justify-content-center border-bottom border-tertiary-subtle pb-3 mb-3"
       >
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-primary">Home</a>
+          <a href="#" class="nav-link px-2 text-secondary-emphasis">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-primary">About Me</a>
+          <a href="#" class="nav-link px-2 text-secondary-emphasis">About Me</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-primary">Portfolio</a>
+          <a href="#" class="nav-link px-2 text-secondary-emphasis"
+            >Portfolio</a
+          >
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-primary">Blog</a>
+          <a href="#" class="nav-link px-2 text-secondary-emphasis">Blog</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-primary">Contact</a>
+          <a href="#" class="nav-link px-2 text-secondary-emphasis">Contact</a>
         </li>
       </ul>
-      <p class="text-center text-primary">© 2023 Esther Smeke</p>
+      <p class="text-center text-secondary">© 2023 Esther Smeke</p>
     </footer>
 
+    <!--Bootstrap-->
     <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-      integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
   </body>
