--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,7 +8,11 @@
     <!--Description-->
     <meta name="description" content="Design Portfolio for Esther Smeke." />
     <!--FavIcon-->
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../images/favicon.ico"
+      type="image/x-icon"
+    />
     <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -17,7 +21,7 @@
       crossorigin="anonymous"
     />
     <!--CSS-->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,7 +35,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">ESTHER SMEKE</a>
+        <a class="navbar-brand" href="../index.html">ESTHER SMEKE</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -47,99 +51,34 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../index.html"
+              >
                 Home
               </a>
             </li>
             <li class="nav-item">
-              <a href="./pages/about.html" class="nav-link">About</a>
+              <a href="./about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="./pages/portfolio.html" class="nav-link"> Portfolio </a>
+              <a href="./portfolio.html" class="nav-link"> Portfolio </a>
             </li>
             <li class="nav-item">
-              <a href="./pages/blog.html" class="nav-link">Blog</a>
+              <a href="./blog.html" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
-              <a href="./pages/contact.html" class="nav-link">Contact</a>
+              <a href="./contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- Hero -->
-    <section class="hero bg-secondary bg-gradient text-white">
-      <div class="container col-xxl-8 px-4 py-5">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-          <div class="col-10 col-sm-8 col-lg-6">
-            <img
-              src="https://placehold.co/500x500"
-              class="d-block mx-lg-auto img-fluid"
-              alt="Bootstrap Themes"
-              width="700"
-              height="500"
-              loading="lazy"
-            />
-          </div>
-          <div class="col-lg-6">
-            <h1 class="display-5 fw-bold text-info lh-1 mb-3">👋 Hi!</h1>
-            <p class="lead">
-              Welcome to my personal website.<br />
-              Feel free to look around, or have a look at my portfolio.
-            </p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <a
-                href="/pages/portfolio.html"
-                class="btn btn-info btn-lg px-4 me-md-2"
-              >
-                Portfolio
-              </a>
-              <a
-                href="./pages/contact.html"
-                class="btn btn-outline-light btn-lg px-4"
-              >
-                Contact
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Latest Work -->
-    <section id="homeWork" class="section--xl">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <img
-              class="shadow-lg rounded-lg"
-              src="https://placehold.co/600x400"
-              alt="Placeholder"
-            />
-          </div>
-          <div class="col-md-6 align-self-center">
-            <p class="small text-info mb-1">Latest Work</p>
-            <h2 class="mb-3">Random Project</h2>
-            <p class="text-black-50">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              odio est eius distinctio odit repellat similique eos repellendus
-              accusamus. Autem consequatur tempora, praesentium facere quasi
-              vitae fuga iusto ullam architecto!
-            </p>
-            <br />
-            <a href="#" class="btn btn-outline-info"> View More &raquo; </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!-- From the Blog -->
-    <section id="homeBlog" class="section--xl bg-info">
+    <section id="homeBlog" class="section--xl bg-white">
       <div class="container">
-        <h2 class="mb-3">From My Blog</h2>
-        <p class="lead">Articles, News and Interesting Stuff!</p>
-
         <div class="mt-2 mt-md-5 row">
           <div class="col-md-4">
             <article class="card card--post shadow">
@@ -149,7 +88,7 @@
                 alt="Post"
               />
               <div class="card-body">
-                <h5 class="card-title">Post Title</h5>
+                <h5 class="card-title">Post Title 1</h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -166,7 +105,7 @@
                 alt="Post"
               />
               <div class="card-body">
-                <h5 class="card-title">Post Title</h5>
+                <h5 class="card-title">Post Title 2</h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -183,7 +122,7 @@
                 alt="Post"
               />
               <div class="card-body">
-                <h5 class="card-title">Post Title</h5>
+                <h5 class="card-title">Post Title 3</h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -194,6 +133,12 @@
           </div>
         </div>
       </div>
+      <br />
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <a href="#" button class="btn btn-sm btn-outline-info" type="button"
+          >View More Posts &raquo;
+        </a>
+      </div>
     </section>
 
     <!--Footer-->
@@ -202,35 +147,29 @@
         class="nav justify-content-center border-bottom border-tertiary-subtle pb-3 mb-3"
       >
         <li class="nav-item">
-          <a href="/index.html" class="nav-link px-2 text-secondary-emphasis"
+          <a href="../index.html" class="nav-link px-2 text-secondary-emphasis"
             >Home</a
           >
         </li>
         <li class="nav-item">
-          <a
-            href="./pages/about.html"
-            class="nav-link px-2 text-secondary-emphasis"
+          <a href="./about.html" class="nav-link px-2 text-secondary-emphasis"
             >About Me</a
           >
         </li>
         <li class="nav-item">
           <a
-            href="./pages/portfolio.html"
+            href="./portfolio.html"
             class="nav-link px-2 text-secondary-emphasis"
             >Portfolio</a
           >
         </li>
         <li class="nav-item">
-          <a
-            href="./pages/blog.html"
-            class="nav-link px-2 text-secondary-emphasis"
+          <a href="./blog.html" class="nav-link px-2 text-secondary-emphasis"
             >Blog</a
           >
         </li>
         <li class="nav-item">
-          <a
-            href="./pages/contact.html"
-            class="nav-link px-2 text-secondary-emphasis"
+          <a href="./contact.html" class="nav-link px-2 text-secondary-emphasis"
             >Contact</a
           >
         </li>
