Corrección de ruteo ./

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">ESTHER SMEKE</a>
+        <a class="navbar-brand" href="./index.html">ESTHER SMEKE</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -47,7 +47,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="./index.html"
+              >
                 Home
               </a>
             </li>
@@ -90,7 +94,7 @@
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <a
-                href="/pages/portfolio.html"
+                href="./pages/portfolio.html"
                 class="btn btn-info btn-lg px-4 me-md-2"
               >
                 Portfolio
@@ -202,7 +206,7 @@
         class="nav justify-content-center border-bottom border-tertiary-subtle pb-3 mb-3"
       >
         <li class="nav-item">
-          <a href="/index.html" class="nav-link px-2 text-secondary-emphasis"
+          <a href="./index.html" class="nav-link px-2 text-secondary-emphasis"
             >Home</a
           >
         </li>
