--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -21,7 +21,7 @@
       crossorigin="anonymous"
     />
     <!--CSS-->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -60,15 +60,15 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="/pages/about.html" class="nav-link">About</a>
+              <a href="./about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="/pages/portfolio.html" class="nav-link" href="#">
+              <a href="./portfolio.html" class="nav-link" href="#">
                 Portfolio
               </a>
             </li>
             <li class="nav-item">
-              <a href="/pages/blog.html" class="nav-link">Blog</a>
+              <a href="./blog.html" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
               <a href="./contact.html" class="nav-link">Contact</a>
