--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Title-->
-    <title>Esther Smeke</title>
+    <title>Esther Smeke &raquo Home</title>
     <!--Description-->
     <meta name="description" content="Design Portfolio for Esther Smeke." />
     <!--FavIcon-->
