--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Title-->
-    <title>Esther Smeke</title>
+    <title>Esther Smeke &raquo About</title>
     <!--Description-->
     <meta name="description" content="Design Portfolio for Esther Smeke." />
     <!--FavIcon-->
@@ -51,19 +51,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="../index.html"
+              <a href="../index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./about.html"
+                >About</a
               >
-                Home
-              </a>
             </li>
             <li class="nav-item">
-              <a href="./about.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link"> Portfolio </a>
+              <a href="./portfolio.html" class="nav-link">Portfolio</a>
             </li>
             <li class="nav-item">
               <a href="./blog.html" class="nav-link">Blog</a>
@@ -101,6 +97,65 @@
               Follow along my learning journey as I create my very first dev
               projects!
             </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Skill Set-->
+    <section class="section--xl">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <p>HTML</p>
+            <div
+              class="progress mb-2 mb-sm-4"
+              role="progressbar"
+              aria-label="Success example"
+              aria-valuenow="25"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar bg-success" style="width: 25%"></div>
+            </div>
+            <p>CSS</p>
+            <div
+              class="progress mb-2 mb-sm-4"
+              role="progressbar"
+              aria-label="Info example"
+              aria-valuenow="50"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar bg-info" style="width: 25%"></div>
+            </div>
+            <p>Bootstrap</p>
+            <div
+              class="progress mb-2 mb-sm-4"
+              role="progressbar"
+              aria-label="Warning example"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar bg-warning" style="width: 20%"></div>
+            </div>
+            <p>Javascript</p>
+            <div
+              class="progress mb-2 mb-sm-4"
+              role="progressbar"
+              aria-label="Danger example"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar bg-danger" style="width: 10%"></div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <h2>My Skills</h2>
+            <p>I'm currently learning web development at Coderhouse.</p>
+            <p>Follow along as I upgrade my skillset!</p>
           </div>
         </div>
       </div>
