--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Title-->
-    <title>Esther Smeke</title>
+    <title>Esther Smeke &raquo Blog</title>
     <!--Description-->
     <meta name="description" content="Design Portfolio for Esther Smeke." />
     <!--FavIcon-->
@@ -51,22 +51,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="../index.html"
-              >
-                Home
-              </a>
+              <a href="../index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="./about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link"> Portfolio </a>
+              <a href="./portfolio.html" class="nav-link">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a href="./blog.html" class="nav-link">Blog</a>
+              <a class="nav-link active" aria-current="page" href="./blog.html"
+                >Blog</a
+              >
             </li>
             <li class="nav-item">
               <a href="./contact.html" class="nav-link">Contact</a>
