--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Title-->
-    <title>Esther Smeke</title>
+    <title>Esther Smeke &raquo Portfolio</title>
     <!--Description-->
     <meta name="description" content="Design Portfolio for Esther Smeke." />
     <!--FavIcon-->
@@ -51,21 +51,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="../index.html"
-              >
-                Home
-              </a>
+              <a href="../index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="./about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link" href="#">
-                Portfolio
-              </a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="nav-item">
               <a href="./blog.html" class="nav-link">Blog</a>
@@ -112,7 +109,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
           <img
-            src="https://placehold.co/400x200"
+            src="https://placehold.co/1500x500"
             class="d-block w-100"
             alt="slide1"
           />
@@ -124,7 +121,7 @@
 
         <div class="carousel-item" data-bs-interval="2000">
           <img
-            src="https://placehold.co/400x200"
+            src="https://placehold.co/1500x500"
             class="d-block w-100"
             alt="slide2"
           />
@@ -136,7 +133,7 @@
 
         <div class="carousel-item">
           <img
-            src="https://placehold.co/400x200"
+            src="https://placehold.co/1500x500"
             class="d-block w-100"
             alt="slide3"
           />
