--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <!--CSS-->
-    <link rel="stylesheet" href="css/style.css" />
+    <!--Sass/CSS-->
+    <link rel="stylesheet" href="./sass/main.css" />
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -95,10 +95,11 @@
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <a
                 href="./pages/portfolio.html"
-                class="btn btn-info btn-lg px-4 me-md-2"
+                class="btn btn-custom btn-lg px-4 me-md-2"
               >
                 Portfolio
               </a>
+
               <a
                 href="./pages/contact.html"
                 class="btn btn-outline-light btn-lg px-4"
